:pencil2: (typo) Correct spelling mistake event name

--- a/.github/workflows/open_pr.yml
+++ b/.github/workflows/open_pr.yml
@@ -3,7 +3,7 @@ name: Open Pull Request
 # only trigger on pull request closed events
 on:
   pull_request:
-    types: [open]
+    types: [opened]
     branches:
       - master
 
