--- a/.github/workflows/master_pull_request.yml
+++ b/.github/workflows/master_pull_request.yml
@@ -7,8 +7,9 @@ on:
       - master
 
 jobs:
-  merge_job:
+  master_pr:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV
-      - run: echo "PR ${{ github.event.number }} has been opened on master branch"
+      - run: echo PR ${{ github.event.number }} has been opened on master branch
+      - run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_HEAD_REF})"
+      - run: echo 'The branch name is' $BRANCH_NAME
