--- a/.github/workflows/master_pull_request.yml
+++ b/.github/workflows/master_pull_request.yml
@@ -6,6 +6,11 @@ on:
     branches:
       - master
 
+env:
+  PR_NUMBER: github.event.number
+  BRANCH_NAME: GITHUB_HEAD_REF
+  USERNAME: github.event.pull_request.user.login
+
 jobs:
   master_pr:
     name: 'PR on Master'
@@ -17,10 +22,12 @@ jobs:
       - name: 'Use kceb/pull-request-url-action@v1'
         uses: kceb/pull-request-url-action@v1
         id: pr-url
+        env:
+          PR_URL: steps.pr-url.outputs.url
 
       - name: 'Display event informations'
         run: |
-          echo PR ${{ github.event.number }} has been opened on master branch
-          echo 'The branch name is' ${GITHUB_HEAD_REF}
-          echo "This PR is opened by ${{ github.event.pull_request.user.login }}"
-          echo "The PR url is ${{ steps.pr-url.outputs.url }}"
+          echo "PR $PR_NUMBER has been opened on master branch"
+          echo "The branch name is $BRANCH_NAME"
+          echo "This PR is opened by $USERNAME"
+          echo "The PR url is $PR_URL"
