--- a/.github/workflows/master_pull_request.yml
+++ b/.github/workflows/master_pull_request.yml
@@ -7,9 +7,9 @@ on:
       - master
 
 env:
-  PR_NUMBER: github.event.number
-  BRANCH_NAME: GITHUB_HEAD_REF
-  USERNAME: github.event.pull_request.user.login
+  PR_NUMBER: echo ${{ github.event.number }}
+  BRANCH_NAME: echo ${{ GITHUB_HEAD_REF }}
+  USERNAME: echo ${{ github.event.pull_request.user.login }}
 
 jobs:
   master_pr:
@@ -23,7 +23,7 @@ jobs:
         uses: kceb/pull-request-url-action@v1
         id: pr-url
         env:
-          PR_URL: steps.pr-url.outputs.url
+          PR_URL: echo ${{ steps.pr-url.outputs.url }}
 
       - name: 'Display event informations'
         run: |
