--- a/.github/workflows/master_pull_request.yml
+++ b/.github/workflows/master_pull_request.yml
@@ -23,6 +23,6 @@ jobs:
       - name: 'Display event informations'
         run: |
           echo "PR ${{ github.event.number }} has been opened on master branch"
-          echo "The branch name is ${{ GITHUB_HEAD_REF }}"
-          echo "This PR is opened by ${{ github.event.pull_request.user.login }}"
-          echo "The PR url is ${{ PR_URL }}"
+          echo "The branch name is ${GITHUB_HEAD_REF}"
+          echo "This PR is opened by ${github.event.pull_request.user.login}"
+          echo "The PR url is ${PR_URL}"
