:zap: (workflow) test pr url

--- a/.github/workflows/master_pull_request.yml
+++ b/.github/workflows/master_pull_request.yml
@@ -17,12 +17,10 @@ jobs:
       - name: 'Use kceb/pull-request-url-action@v1'
         uses: kceb/pull-request-url-action@v1
         id: pr-url
-        env:
-          PR_URL: echo ${{ steps.pr-url.outputs.url }}
 
       - name: 'Display event informations'
         run: |
           echo "PR ${{ github.event.number }} has been opened on master branch"
           echo "The branch name is ${GITHUB_HEAD_REF}"
           echo "This PR is opened by ${{ github.event.pull_request.user.login }}"
-          echo "The PR url is $PR_URL"
+          echo "The PR url is ${{ steps.pr-url.outputs.url }}"
