:ambulance: (test) new envent syntax

--- a/.github/workflows/master_pull_request.yml
+++ b/.github/workflows/master_pull_request.yml
@@ -14,13 +14,9 @@ jobs:
       - name: 'Checkout the code'
         uses: actions/checkout@v2
 
-      - name: 'Use kceb/pull-request-url-action@v1'
-        uses: kceb/pull-request-url-action@v1
-        id: pr-url
-
       - name: 'Display event informations'
         run: |
           echo "PR ${{ github.event.number }} has been opened on master branch"
-          echo "The branch name is ${GITHUB_HEAD_REF}"
+          echo "The branch name is ${{ github.head_ref }}"
           echo "This PR is opened by ${{ github.event.pull_request.user.login }}"
-          echo "The PR url is ${{ steps.pr-url.outputs.url }}"
+          echo "The PR url is https://github.com/${{ github.action_repository }}/pull/${{ github.event.number }}"
