--- a/.github/workflows/master_pull_request.yml
+++ b/.github/workflows/master_pull_request.yml
@@ -39,4 +39,4 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
         uses: Ilshidur/action-discord@master
         with:
-          args: '@${{ secrets.DISCORD_ROLE }}'
+          args: '<@&${{ secrets.DISCORD_ROLE }}>'
