:sparkles: (fea) only trigger action on opened PR

--- a/.github/workflows/master_pull_request.yml
+++ b/.github/workflows/master_pull_request.yml
@@ -5,6 +5,8 @@ on:
   pull_request:
     branches:
       - master
+    types:
+      - 'opened'
 
 jobs:
   master_pr:
@@ -14,15 +16,7 @@ jobs:
       - name: 'Checkout the code'
         uses: actions/checkout@v2
 
-      - name: 'Display event informations'
-        run: |
-          echo "PR ${{ github.event.number }} has been opened on master branch"
-          echo "The branch name is ${{ github.head_ref }}"
-          echo "This PR is opened by ${{ github.event.pull_request.user.login }}"
-          echo "The PR url is https://github.com/${{ github.repository }}/pull/${{ github.event.number }}"
-
-      - name: 'Test Another Github Action on Discord'
-        if: ${{ success() }}
+      - name: 'Tag team users on Discord'
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
           DISCORD_USERNAME: GitHub Actions
@@ -30,14 +24,13 @@ jobs:
         with:
           args: '<@&${{ secrets.DISCORD_ROLE }}>'
 
-      - name: 'Send Event informations to Discord Channel'
-        if: ${{ success() }}
+      - name: 'Create embed informations to Discord Channel'
         uses: sarisia/actions-status-discord@v1
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          title: 'A new PR is Opened on master ✨'
+          title: '${{ github.event.pull_request.user.login }} opened a PR on master ✨'
           description: |
             Branch `${{ github.head_ref }}`
-            **Click [PR link on Github](https://github.com/${{ github.repository }}/pull/${{ github.event.number }}) to review!**
+            **Click [here](https://github.com/${{ github.repository }}/pull/${{ github.event.number }} "GitHub PR link") to review!**
           image: ${{ secrets.EMBED_IMAGE }}
           username: GitHub Actions
