:art: (improve) Unset prefix title discord embed

--- a/.github/workflows/master_pull_request.yml
+++ b/.github/workflows/master_pull_request.yml
@@ -34,3 +34,4 @@ jobs:
             **Click [here](https://github.com/${{ github.repository }}/pull/${{ github.event.number }} "GitHub PR link") to review!**
           image: ${{ secrets.EMBED_IMAGE }}
           username: GitHub Actions
+          noprefix: true
